--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 @import './base.scss';
 @import './layout.scss';
 @import './button.scss';
-@import './layout/aside.scss';
-@import './layout/header.scss';
-@import './layout/section.scss';
+@import './aside.scss';
+@import './header.scss';
+@import './section.scss';
 $color: #333;
 #app,
 html,
